--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <audio id="bgm" src="/bgm.mp3" preload="auto" loop></audio>
 
     <!-- React Entry Point -->
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/game.jsx"></script>
 
     <!-- Loader control script -->
     <script>
